fix spacing on mobile ui

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 
 html,
 body {
-    margin: 0;
+    margin: 2em;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
@@ -22,14 +22,6 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
-}
-
-@media only screen {
-    body {
-        margin: 2em auto;
-        max-width: 1000px;
-        color: rgb(55, 53, 47);
-    }
 }
 
 a,
@@ -190,5 +182,3 @@ p {
     border-radius: 0;
     text-align: center;
 }
-
-
